project(Utilities)

add_subdirectory(SplitTet)
add_subdirectory(vtk2obj)
add_subdirectory(vtk2ovm)
add_subdirectory(tetvtk2mesh)
#add_subdirectory(vtudecode) #add VTK support for compiling this project
add_subdirectory(vtu2vtklabel)
add_subdirectory(tetovm2vtk)
add_subdirectory(TetHexFeatureTransfer)